--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,21 +9,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <meta-data android:name="firebase_analytics_collection_deactivated" android:value="true" />
+        <meta-data
+            android:name="firebase_analytics_collection_deactivated"
+            android:value="true" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".GuestActivity"
             android:label="@string/app_name">
+
+        </activity>
+        <activity
+            android:name=".HostActivity"
+            android:label="@string/title_activity_host" />
+        <activity
+            android:name=".FirstConnectionActivity"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ActivityHost"
-            android:label="@string/title_activity_host"></activity>
     </application>
 
 </manifest>
