--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,18 +15,17 @@
 
         <activity
             android:name=".GuestActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" />
 
-        </activity>
         <activity
             android:name=".HostActivity"
-            android:label="@string/title_activity_host" />
+            android:label="@string/app_name" />
+
         <activity
             android:name=".FirstConnectionActivity"
             android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
