--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <meta-data
             android:name="firebase_analytics_collection_deactivated"
             android:value="true" />
@@ -21,14 +22,11 @@
             android:name=".HostActivity"
             android:label="@string/app_name" />
 
-        <activity
-            android:name=".FirstConnectionActivity"
-            android:noHistory="true">
+        <activity android:name=".FirstConnectionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
