--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:3.1.0'
     implementation 'com.facebook.android:facebook-login:4.28.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.hootsuite.android:nachos:1.1.1'
 
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
