--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,14 @@
             android:value="true" />
 
         <activity
-            android:name=".GuestActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait" />
 
         <activity
-            android:name=".HostActivity"
-            android:label="@string/app_name"
-            android:windowSoftInputMode="adjustPan" />
-
-        <activity android:name=".FirstConnectionActivity">
+            android:name=".FirstConnectionActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
