--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
             android:name="firebase_analytics_collection_deactivated"
             android:value="true" />
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDljkVhAKo_zH6lpl-6p_oK56reP2CpT-A"/>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
